# joyson_glove_sdk

./: .clang-format  .gitignore  API_REFERENCE.md  CMakeLists.txt  LICENSE  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
cmake/: joyson_glove_sdkConfig.cmake.in
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  PROTOCOL.md  QUICKSTART.md  README_BADGES.md  TROUBLESHOOTING.md
examples/: basic_motor_control.cpp  read_sensors.cpp  servo_mode_demo.cpp  test_encoder_reader.cpp  test_imu_reader.cpp  test_motor_controller.cpp
include/joyson_glove/: encoder_reader.hpp  glove_sdk.hpp  imu_reader.hpp  motor_controller.hpp  protocol.hpp  udp_client.hpp
scripts/: build.sh  install.sh  monitor_network.py  run_examples.sh  setup_network.sh
src/: encoder_reader.cpp  glove_sdk.cpp  imu_reader.cpp  motor_controller.cpp  protocol.cpp  udp_client.cpp
tests/: test_protocol.cpp  test_udp_client.cpp
